<resources>
    <string name="app_name">LabWork 2-1-10</string>
<!--    Main Activity-->
    <string name="alert_dialog">Alert Dialog</string>
    <string name="fragment_dialog">Fragment Dialog</string>
    <string name="username">Name</string>
    <string name="password">Password</string>

<!--    Fragment Dialog-->
    <string name="ok">Ok!</string>
    <string name="no">No</string>
    <string name="name">Имя</string>
    <string name="alex">Alex</string>
    <string name="rating">Рейтинг</string>
    <string name="raiting">5</string>


</resources>